feature: adds i18n translations

--- a/src/ui/navbar/NavBar.module.scss
+++ b/src/ui/navbar/NavBar.module.scss
@@ -42,6 +42,12 @@ $LOGO_WIDTH: 153px;
     font-size: $font-size-2;
     display: flex;
 
+    a {
+      text-decoration: none;
+      text-transform: uppercase;
+      display: flex;
+    }
+
     &:hover {
       background-color: $color-dark-2;
       cursor: pointer;
