--- a/src/app/Home/Intro/Intro.module.scss
+++ b/src/app/Home/Intro/Intro.module.scss
@@ -8,6 +8,13 @@
   justify-content: center;
   width: 100%;
   position: relative;
+  overflow: hidden;
+
+  &__actions {
+    a {
+      text-decoration: none;
+    }
+  }
 
   &__background-image {
     position: absolute;
