improv: updates html font-size media queries

--- a/src/app/Home/Intro/Intro.module.scss
+++ b/src/app/Home/Intro/Intro.module.scss
@@ -26,6 +26,11 @@
     background-repeat: no-repeat;
     background-position: center right;
     background-size: contain;
+    display: none;
+
+    @include atTablet {
+      display: block;
+    }
   }
 
   h1 {
