feature: creates sidebar and headline-1 typography

--- a/plop-templates/component/Component.hbs
+++ b/plop-templates/component/Component.hbs
@@ -2,9 +2,9 @@ import clsx from 'clsx';
 import { {{pascalCase name}}Props } from './{{pascalCase name}}.types';
 import styles from './{{pascalCase name}}.module.scss';
 
-export const {{pascalCase name}}: React.FC<{{pascalCase name}}Props> = ({ children, className, style }) => {
+export const {{pascalCase name}}: React.FC<{{pascalCase name}}Props> = ({ children, className }) => {
   return (
-    <div className={clsx(styles['{{kebabCase name}}'], className)} style={style}>
+    <div className={clsx(styles['{{kebabCase name}}'], className)}>
       {children}
     </div>
   );
