--- a/src/app/Home/Home.module.scss
+++ b/src/app/Home/Home.module.scss
@@ -1,5 +1,18 @@
 @import "../../theme/base";
 
 .home {
-  color: $color-brand;
+  position: relative;
+
+  background-color: var(--color-background);
+  height: 100vh;
+
+  @include withSidebar;
+
+  &__sidebar {
+    @include withNavbar;
+  }
+
+  &__main-panel {
+    @include withNavbar;
+  }
 }
