--- a/src/theme/button/_button-outline.scss
+++ b/src/theme/button/_button-outline.scss
@@ -7,10 +7,7 @@
   border-radius: $border-radius-pill;
   border: 2px solid $color-brand;
   min-width: 88px;
-  transition:
-    background $duration-slow,
-    border-color $duration-medium,
-    color $duration-medium;
+  transition: background $duration-slow, border-color $duration-medium, color $duration-medium;
   background-position: center;
 
   &:hover,
