--- a/src/theme/utilities/functions/deep-map-get.scss
+++ b/src/theme/utilities/functions/deep-map-get.scss
@@ -11,14 +11,14 @@
 //
 // @return Unspecified (it may return anything as a result)
 // ---------------------------------------------------------
-@function deep-map-get ($map, $keys...) {
-    @if type-of($map) != 'map' {
-      @error 'The argument $map: `#{$map}` is of incorrect type: `#{type-of($map)}`. Type of `Map` is required!';
-    }
-  
-    @each $key in $keys {
-      $map: map-get($map, $key);
-    }
-  
-    @return $map;
+@function deep-map-get($map, $keys...) {
+  @if type-of($map) != "map" {
+    @error 'The argument $map: `#{$map}` is of incorrect type: `#{type-of($map)}`. Type of `Map` is required!';
   }
+
+  @each $key in $keys {
+    $map: map-get($map, $key);
+  }
+
+  @return $map;
+}
