--- a/src/ui/typography/Typography.module.scss
+++ b/src/ui/typography/Typography.module.scss
@@ -2,4 +2,83 @@
 
 .typography {
   color: $color-brand;
+
+  &__headline1 {
+    color: var(--color-typography-headline-1);
+    @include font-properties($typography-headline-1);
+    @include normalizeTypography;
+  }
+
+  &__headline2 {
+    color: var(--color-typography-headline-2);
+    @include font-properties($typography-headline-2);
+    @include normalizeTypography;
+  }
+
+  &__headline3 {
+    color: var(--color-typography-headline-3);
+    @include font-properties($typography-headline-3);
+    @include normalizeTypography;
+  }
+
+  &__headline4 {
+    color: var(--color-typography-headline-4);
+    @include font-properties($typography-headline-4);
+    @include normalizeTypography;
+  }
+
+  &__headline5 {
+    color: var(--color-typography-headline-5);
+    @include font-properties($typography-headline-5);
+    @include normalizeTypography;
+  }
+
+  &__headline6 {
+    color: var(--color-typography-headline-6);
+    @include font-properties($typography-headline-6);
+    @include normalizeTypography;
+  }
+
+  &__text {
+    color: var(--color-typography-text);
+    @include font-properties($typography-text);
+    @include normalizeTypography;
+    margin-bottom: $space-s;
+  }
+
+  &__text-bold {
+    color: var(--color-typography-text-bold);
+    @include font-properties($typography-text-bold);
+    @include normalizeTypography;
+  }
+
+  &__subtitle {
+    color: var(--color-typography-subtitle);
+    @include font-properties($typography-subtitle);
+    @include normalizeTypography;
+  }
+
+  &__button-label {
+    color: var(--color-typography-button-label);
+    @include font-properties($typography-button-label);
+    @include normalizeTypography;
+  }
+
+  &__mini-button-label {
+    color: var(--color-typography-mini-button-label);
+    @include font-properties($typography-mini-button-label);
+    @include normalizeTypography;
+  }
+
+  &__description {
+    color: var(--color-typography-description);
+    @include font-properties($typography-description);
+    @include normalizeTypography;
+  }
+
+  &__mini-description {
+    color: var(--color-typography-mini-description);
+    @include font-properties($typography-mini-description);
+    @include normalizeTypography;
+  }
 }
