--- a/src/theme/globals.scss
+++ b/src/theme/globals.scss
@@ -73,8 +73,20 @@ body[data-theme="dark"] {
   --color-button-secondary-text: var(--color-white);
 
   // Typography
-  --color-text-headline-1: var(--color-white);
+  --color-typography-headline-1: var(--color-white);
   --color-typography-text: var(--color-white);
+  --color-typography-headline-2: var(--color-white);
+  --color-typography-headline-3: var(--color-white);
+  --color-typography-headline-4: var(--color-white);
+  --color-typography-headline-5: var(--color-white);
+  --color-typography-headline-6: var(--color-white);
+  --color-typography-text: var(--color-white);
+  --color-typography-text-bold: var(--color-white);
+  --color-typography-subtitle: var(--color-white);
+  --color-typography-button-label: var(--color-white);
+  --color-typography-mini-button-label: var(--color-white);
+  --color-typography-description: var(--color-white);
+  --color-typography-mini-description: var(--color-white);
 
   // Tab
   --color-tab-navigation-border: var(--color-dark-7);
