--- a/src/ui/mainpanel/MainPanel.module.scss
+++ b/src/ui/mainpanel/MainPanel.module.scss
@@ -2,9 +2,10 @@
 
 .main-panel {
   background-color: var(--color-dark-11);
-  min-height: 100vh;
-  width: 100%;
   position: relative;
+  overflow: hidden;
+  height: 100vh;
+  width: 100%;
 
   &__container {
     padding: 0 $main-panel-container-space-x;
