feat: property details page

--- a/plop-templates/component/ComponentContainer.hbs
+++ b/plop-templates/component/ComponentContainer.hbs
@@ -1,10 +1,9 @@
 
 
-import { {{{pascalCase name}}}Props } from './{{{pascalCase name}}}.types';
 import { {{{pascalCase name}}} } from './{{{pascalCase name}}}';
 
-export const {{{pascalCase name}}}Container = ({className, style}: {{{pascalCase name}}}Props) => {
+export const {{{pascalCase name}}}Container = () => {
   return (
-    <{{{pascalCase name}}} className={className} style={style}>Test</{{{pascalCase name}}}>
+    <{{{pascalCase name}}}>Test</{{{pascalCase name}}}>
   );
 };
