--- a/src/theme/globals.scss
+++ b/src/theme/globals.scss
@@ -37,6 +37,21 @@ a {
 }
 
 body[data-theme="dark"] {
+  // Status colors
+  --color-status-info: #0062ff;
+  --color-status-info-light: #d6f5ff;
+  --color-status-info-lighter: #f0fbff;
+  --color-status-success: #00cc99;
+  --color-status-success-light: #d6fff5;
+  --color-status-success-lighter: #e6fff9;
+  --color-status-warning: #fad105;
+  --color-status-warning-light: #fffdb8;
+  --color-status-warning-lighter: #fffeeb;
+  --color-status-critical: #bd2d00;
+  --color-status-critical-light: #ffe2e0;
+  --color-status-critical-lighter: #fff5f5;
+  --color-status-unknown: #f4f6f8;
+
   // Brand
   --color-brand: #2d3575;
   --color-brand-bright: #5d6ff1;
@@ -82,11 +97,12 @@ body[data-theme="dark"] {
   --color-typography-headline-6: var(--color-white);
   --color-typography-text: var(--color-white);
   --color-typography-text-bold: var(--color-white);
-  --color-typography-subtitle: var(--color-white);
+  --color-typography-subtitle: var(--color-dark-5);
   --color-typography-button-label: var(--color-white);
   --color-typography-mini-button-label: var(--color-white);
-  --color-typography-description: var(--color-white);
+  --color-typography-description: var(--color-dark-5);
   --color-typography-mini-description: var(--color-white);
+  --color-typography-link: var(--color-status-info);
 
   // Tab
   --color-tab-navigation-border: var(--color-dark-7);
@@ -97,21 +113,6 @@ body[data-theme="dark"] {
   --color-light-1: #c8cacb;
   --color-light-2: #dee0e2;
   --color-light-3: #f4f6f8;
-
-  // Status colors
-  --color-status-normal: #009ccc;
-  --color-status-normal-light: #d6f5ff;
-  --color-status-normal-lighter: #f0fbff;
-  --color-status-ok: #00cc99;
-  --color-status-ok-light: #d6fff5;
-  --color-status-ok-lighter: #e6fff9;
-  --color-status-warning: #fad105;
-  --color-status-warning-light: #fffdb8;
-  --color-status-warning-lighter: #fffeeb;
-  --color-status-critical: #bd2d00;
-  --color-status-critical-light: #ffe2e0;
-  --color-status-critical-lighter: #fff5f5;
-  --color-status-unknown: #f4f6f8;
 
   // Data Visualization colors
   --color-value-increase: #00d3a1;
