--- a/src/ui/mainpanel/MainPanel.module.scss
+++ b/src/ui/mainpanel/MainPanel.module.scss
@@ -3,7 +3,7 @@
 .main-panel {
   background-color: var(--color-dark-11);
   position: relative;
-  overflow: hidden;
+  overflow-y: auto;
   height: 100vh;
   width: 100%;
 
