feat: extens property details

--- a/src/app/real-estate/solana/property/Property.module.scss
+++ b/src/app/real-estate/solana/property/Property.module.scss
@@ -55,4 +55,11 @@
       }
     }
   }
+
+  &__ownership {
+    &--card {
+      background-color: var(--color-dark-11);
+      margin-top: $space-default;
+    }
+  }
 }
