--- a/src/ui/typography/Typography.module.scss
+++ b/src/ui/typography/Typography.module.scss
@@ -77,6 +77,7 @@
     color: var(--color-typography-description);
     @include font-properties($typography-description);
     @include normalizeTypography;
+    margin-bottom: $space-xs;
   }
 
   &__mini-description {
@@ -89,5 +90,10 @@
     color: var(--color-typography-link);
     @include font-properties($typography-link);
     @include normalizeTypography;
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
