feat: circular progress in ownership details

--- a/src/theme/globals.scss
+++ b/src/theme/globals.scss
@@ -102,7 +102,7 @@ body[data-theme="dark"] {
   --color-typography-button-label: var(--color-white);
   --color-typography-mini-button-label: var(--color-white);
   --color-typography-description: var(--color-dark-5);
-  --color-typography-mini-description: var(--color-white);
+  --color-typography-mini-description: var(--color-dark-4);
   --color-typography-link: var(--color-status-info);
 
   // Tab
