--- a/src/ui/typography/Typography.module.scss
+++ b/src/ui/typography/Typography.module.scss
@@ -91,6 +91,7 @@
     @include font-properties($typography-link);
     @include normalizeTypography;
     text-decoration: none;
+    font-size: inherit;
 
     &:hover {
       text-decoration: underline;
