--- a/src/ui/mainpanel/MainPanel.module.scss
+++ b/src/ui/mainpanel/MainPanel.module.scss
@@ -1,7 +1,7 @@
 @import "../../theme/base";
 
 .main-panel {
-  background-color: var(--color-dark-11);
+  background-color: var(--color-background-contrast);
   position: relative;
   overflow-y: auto;
   height: 100vh;
