--- a/src/theme/_variables.scss
+++ b/src/theme/_variables.scss
@@ -147,6 +147,7 @@ $border-radius-medium: 5px !default;
 $border-radius-large: 8px !default;
 $border-radius-circle: 50% !default;
 $border-radius-pill: 32px !default;
+$border-radius-button: 32px !default;
 
 // Typography
 //
