--- a/src/ui/typography/Typography.module.scss
+++ b/src/ui/typography/Typography.module.scss
@@ -7,6 +7,7 @@
     color: var(--color-typography-headline-1);
     @include font-properties($typography-headline-1);
     @include normalizeTypography;
+    margin-bottom: $space-s;
   }
 
   &__headline2 {
