feat: token metadata attribute suggestions

--- a/src/app/real-estate/solana/list-property/ListProperty.module.scss
+++ b/src/app/real-estate/solana/list-property/ListProperty.module.scss
@@ -16,4 +16,10 @@
   &__attachments {
     margin-top: $space-xl;
   }
+
+  &__special-attributes {
+    &--card {
+      margin-top: $space-default;
+    }
+  }
 }
