--- a/src/theme/globals.scss
+++ b/src/theme/globals.scss
@@ -130,3 +130,7 @@ body[data-theme="dark"] {
 hr {
   border-color: var(--color-dark-9);
 }
+
+code {
+  background-color: var(--color-background-contrast);
+}
