--- a/src/ui/typography/Typography.module.scss
+++ b/src/ui/typography/Typography.module.scss
@@ -40,6 +40,7 @@
     color: var(--color-typography-headline-6);
     @include font-properties($typography-headline-6);
     @include normalizeTypography;
+    margin-bottom: $space-xs;
   }
 
   &__text {
