--- a/src/theme/_variables.scss
+++ b/src/theme/_variables.scss
@@ -3,6 +3,15 @@
 // Variables should follow the `$component-state-property-size` formula for
 // consistent naming. Ex: $nav-link-disabled-color and $modal-content-box-shadow-xs.
 
+$navbar-height: 70px;
+$navbar-logo-width: 153px;
+
+$z-index-navigation: 3;
+$z-index-modal: 4;
+$z-index-form-dropdown: 5;
+$z-index-tooltip: 6;
+$z-index-toasts: 7;
+
 $mq-x-small: 0px !default;
 $mq-small: 540px !default;
 $mq-medium: 740px !default;
