--- a/src/ui/wallet-selector/WalletSelector.module.scss
+++ b/src/ui/wallet-selector/WalletSelector.module.scss
@@ -1,53 +1,88 @@
 @import "../../theme/base";
 
 .wallet-selector {
-  height: $navbar-height;
   position: relative;
-  align-items: center;
   display: flex;
+  align-items: center;
+  height: $navbar-height;
 
   &__widget {
-    background-color: var(--color-background);
-    border: 2px solid var(--color-button-secondary);
-    border-bottom-left-radius: $border-radius;
-    border-bottom-right-radius: $border-radius;
-    top: $navbar-height;
     position: absolute;
-    width: 420px;
+    top: $navbar-height;
     right: 0;
+    z-index: $z-index-navigation;
+    width: 420px;
+    border: 2px solid var(--color-button-secondary);
+    border-bottom-right-radius: $border-radius;
+    border-bottom-left-radius: $border-radius;
+    background-color: var(--color-background);
+
+    &--backdrop {
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      z-index: $z-index-navigation - 1;
+      background-color: transparent;
+    }
   }
 
   &__chain-network-dropdowns {
+    position: relative;
     display: flex;
+
     button {
       border-top: 0;
+
       &:hover {
         cursor: default;
       }
+
       &:nth-child(1) {
-        border-left: 0;
         border-right-width: 1px;
+        border-left: 0;
       }
+
       &:nth-child(2) {
         border-right: 0;
         border-left-width: 1px;
       }
     }
+
+    &--chains-list,
+    &--networks-list {
+      position: absolute;
+      top: 44px;
+      right: 0;
+      left: 0;
+      z-index: $z-index-navigation;
+      width: 100%;
+      height: #{82 + 62}px;
+      padding: $space-s;
+      overflow-y: auto;
+      background-color: var(--color-background-contrast);
+    }
+
+    &--chains-list-card,
+    &--networks-list-card {
+      margin-bottom: $space-s;
+    }
   }
 
   &__balance {
     display: flex;
-    justify-content: center;
     flex-direction: column;
-    background-color: var(--color-background-contrast);
+    justify-content: center;
     padding: $space-m;
+    background-color: var(--color-background-contrast);
   }
 
   &__connect {
-    padding: $space-m;
     display: flex;
-    align-items: flex-start;
     justify-content: flex-end;
+    align-items: flex-start;
+    padding: $space-m;
   }
 
   &__button {
