--- a/src/ui/wallet-selector/WalletSelector.module.scss
+++ b/src/ui/wallet-selector/WalletSelector.module.scss
@@ -34,10 +34,7 @@
 
     button {
       border-top: 0;
-
-      &:hover {
-        cursor: default;
-      }
+      border-radius: 0;
 
       &:nth-child(1) {
         border-right-width: 1px;
@@ -85,7 +82,9 @@
     padding: $space-m;
   }
 
-  &__button {
-    border-radius: 0;
+  &__button--disable-hover {
+    &:hover {
+      cursor: default;
+    }
   }
 }
