chore: re-enables mixin

--- a/src/theme/_base.scss
+++ b/src/theme/_base.scss
@@ -72,6 +72,6 @@ $sidebar-width: 320px;
   padding-top: $navbar-height * 2;
 }
 @mixin normalizeTypography {
-  margin: 0;
+  margin-top: 0;
   padding: 0;
 }
