--- a/src/ui/tab/navigation/Navigation.module.scss
+++ b/src/ui/tab/navigation/Navigation.module.scss
@@ -2,7 +2,7 @@
 
 .navigation {
   display: flex;
-  margin-top: $space-l;
+  margin-top: $space-m;
   border-bottom: 1px solid var(--color-tab-navigation-border);
   padding: 0 $main-panel-container-space-x;
 }
