--- a/src/ui/card/Card.module.scss
+++ b/src/ui/card/Card.module.scss
@@ -13,6 +13,7 @@
     border-top-left-radius: $border-radius;
     border-top-right-radius: $border-radius;
     background-repeat: no-repeat;
+    background-position: center center;
     background-size: cover;
   }
 
