--- a/src/ui/typography/Typography.module.scss
+++ b/src/ui/typography/Typography.module.scss
@@ -32,6 +32,7 @@
   &__headline5 {
     @include font-properties($typography-headline-5);
     @include normalizeTypography;
+    margin-top: $space-default;
     margin-bottom: $space-xs;
     color: var(--color-typography-headline-5);
   }
@@ -39,6 +40,7 @@
   &__headline6 {
     @include font-properties($typography-headline-6);
     @include normalizeTypography;
+    margin-top: $space-default;
     margin-bottom: $space-xs;
     color: var(--color-typography-headline-6);
   }
