--- a/src/app/real-estate/solana/property/Property.module.scss
+++ b/src/app/real-estate/solana/property/Property.module.scss
@@ -22,13 +22,59 @@
     }
   }
 
+  &__attachments {
+    position: relative;
+    margin: $space-default 0;
+
+    &--content {
+      min-height: 98px;
+    }
+
+    &--card {
+      margin-bottom: $space-default;
+    }
+
+    &--overlay {
+      position: absolute;
+      z-index: $z-index-navigation - 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end;
+      align-items: flex-start;
+      width: 100%;
+      height: 100%;
+      border-radius: $border-radius;
+      background-color: rgba($color-black, $opacity-high);
+
+      > div {
+        border-top: 1px solid var(--color-background);
+        padding: $space-l;
+        background-color: rgba($color-black, 1);
+      }
+    }
+
+    &--overlay-text {
+      color: var(--color-white);
+    }
+  }
+
   &__location {
+    position: relative;
+
     &--map {
       height: 210px;
       margin: $space-default 0;
       border-radius: $border-radius;
       background-repeat: no-repeat;
       background-size: cover;
+    }
+
+    &--overlay {
+      @extend .property__attachments--overlay;
+    }
+
+    &--overlay-text {
+      @extend .property__attachments--overlay-text;
     }
   }
 
@@ -42,6 +88,10 @@
 
     > div {
       margin-bottom: $space-l;
+    }
+
+    &--heading {
+      margin-top: 0;
     }
   }
 
@@ -61,6 +111,12 @@
     &--card {
       margin-top: $space-default;
       background-color: var(--color-dark-11);
+    }
+  }
+
+  &__register-interest-modal {
+    &--header {
+      margin-bottom: 0;
     }
   }
 }
