--- a/src/ui/modal/Modal.module.scss
+++ b/src/ui/modal/Modal.module.scss
@@ -29,7 +29,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: $color-dark-50;
+    background: rgba($color-black, $opacity-mid);
   }
 
   button.modal__close-button {
@@ -53,7 +53,7 @@
     height: auto;
     max-height: 90vh;
     border-radius: $border-radius-medium;
-    background-color: $color-white;
+    background-color: var(--color-background);
     box-shadow: $shadow-fluffy;
 
     &--small {
@@ -92,16 +92,16 @@
   &__header {
     @include font-properties($text-1);
     border-bottom: $border-divider;
-    padding: $space-m-1;
+    padding: $space-l;
     color: $color-dark-1;
   }
 
   &__content {
     @include font-properties($text-2);
-    max-height: 80vh;
-    margin: 12px $space-l;
+    max-height: 50vh;
+    padding: $space-l;
     overflow-y: auto;
-    color: $color-dark-1;
+    background-color: var(--color-background-contrast);
 
     &:last-child {
       margin-bottom: $space-l;
